[package]
name = "mdterm"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
ratatui = "0.23"
pulldown-cmark = "0.9"
syntect = "5.1"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
regex = "1.10"
anyhow = "1.0"
chrono = "0.4"
signal-hook = "0.3"
clap = { version = "4.4", features = ["derive"] }
